baml_language/crates/baml_tests/snapshots/compiles/namespaces_nested/baml_tests__compiles__namespaces_nested__01_lexer__main.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Root"
Word "namespace"
Colon ":"
Word "references"
Word "a"
Word "type"
Word "from"
Word "a"
Word "nested"
Word "namespace"
Class "class"
Word "AppConfig"
LBrace "{"
Word "api_key"
Word "string"
RBrace "}"
Function "function"
Word "CallOpenAI"
LParen "("
Word "cfg"
Colon ":"
Word "AppConfig"
RParen ")"
Arrow "->"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "OpenAIResponse"
LBrace "{"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "OpenAIResponse"
LBrace "{"
Word "text"
Colon ":"
Quote "\""
Word "response"
Quote "\""
Comma ","
Word "model"
Colon ":"
Quote "\""
Word "gpt-4"
Quote "\""
RBrace "}"
RBrace "}"
