baml_language/crates/baml_tests/snapshots/compiles/namespaces_nested/baml_tests__compiles__namespaces_nested__01_lexer__ns_llm_ns_openai_client.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Nested"
Word "namespace"
Colon ":"
Word "llm"
Dot "."
Word "openai"
Class "class"
Word "OpenAIResponse"
LBrace "{"
Word "text"
Word "string"
Word "model"
Word "string"
RBrace "}"
